infrastructure/k8s/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.0
          args:
            - start-dev
            - --import-realm
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keycloak-import
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: keycloak-import
          configMap:
            name: keycloak-realm-import
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
